--- a/src/app/file-manager/file-manager.component.html
+++ b/src/app/file-manager/file-manager.component.html
@@ -1,5 +1,5 @@
 
-    <div>
+    <!-- <div>
         <app-header></app-header>
         <div class="row">
             <div class="col-3">
@@ -7,6 +7,23 @@
             </div>
             <div class="col-9">
                 <app-file-explorer></app-file-explorer>
+            </div>
+        </div>
+    </div>
+     -->
+
+     <div>
+        <app-header></app-header>
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Sidebar for large screens, hidden on small screens -->
+                <div class="col-md-3  d-md-block">
+                    <app-sidebar></app-sidebar>
+                </div>
+                <!-- File Explorer takes full width on small screens -->
+                <div class="col-12 col-md-9">
+                    <app-file-explorer></app-file-explorer>
+                </div>
             </div>
         </div>
     </div>
