--- a/src/app/folder-file-managment/file-tree/file-tree.component.html
+++ b/src/app/folder-file-managment/file-tree/file-tree.component.html
@@ -58,14 +58,16 @@
   <div>
     <ul>
       <ng-container *ngFor="let folder of folders">
-        <li>
-          <details [open]="isFolderOpen(folder)">
-            <summary [class.active]="isFolderActive(folder)">
-              <i class="fa-solid fa-folder" (click)="onFolderClick(folder)"></i> {{folder.name}}
-            </summary>
-            <app-file-tree *ngIf="folder.childFolders && folder.childFolders.length" [folders]="folder.childFolders"></app-file-tree>
-          </details>
-        </li>
+        <ng-container *ngIf="!isZipFolder(folder)">
+          <li>
+            <details [open]="isFolderOpen(folder)">
+              <summary [class.active]="isFolderActive(folder)">
+                <i class="fa-solid fa-folder" (click)="onFolderClick(folder)"></i> {{folder.name}}
+              </summary>
+              <app-file-tree *ngIf="folder.childFolders && folder.childFolders.length" [folders]="folder.childFolders"></app-file-tree>
+            </details>
+          </li>
+        </ng-container>
       </ng-container>
     </ul>
   </div>
