--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -1,9 +1,12 @@
 <div class="register">
 <h2 mat-dialog-title class="title">Register</h2>
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <mat-form-field>
+  <mat-form-field class="pass">
     <mat-label>Username</mat-label>
     <input matInput formControlName="username">
+    <mat-error *ngIf="registerForm.get('username')?.hasError('pattern')">
+      Username must include at least one letter and be 3-15 characters long. Only letters, numbers, and underscores are allowed.
+    </mat-error>
   </mat-form-field>
   <mat-form-field class="pass">
     <mat-label>Password</mat-label>
